--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "qb": "node scripts/build.js --quick",
     "clean": "node scripts/build.js --clean",
     "build:analyze": "node scripts/build.js --analyze",
-    "release": "node scripts/release.js"
+    "release": "node scripts/release.js",
+    "deploy": "node scripts/deploy.js"
   },
   "engines": {
     "node": ">=18.0.0"
@@ -17,6 +18,7 @@
   "devDependencies": {
     "archiver": "^7.0.1",
     "clean-css": "^5.3.3",
+    "dotenv": "^17.2.3",
     "fs-extra": "^11.2.0",
     "glob": "^10.4.5",
     "html-minifier-terser": "^7.2.0",
