--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hackpuzzle-extension",
+  "name": "hp-build-tool",
   "version": "0.1.1",
   "description": "Build tooling for the hackpuzzle browser extension",
   "license": "MIT",
